force-app/main/default/objects/Case/fields/Ageing_of_Open_Cases_Days__c.field-meta.xml
<CustomField>
    <fullName>Ageing_of_Open_Cases_Days__c</fullName>
    <description>Source-system age of an open support case in days corresponding to the original Ageing of Open Cases ingredient.</description>
    <inlineHelpText>Age in days for open support cases as supplied by the support source.</inlineHelpText>
    <label>Ageing of Open Cases Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>