force-app/main/default/objects/Case/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <description>Product or product line associated with the support case, corresponding to the original Product and PL support ingredients.</description>
    <inlineHelpText>Product line associated with this support case.</inlineHelpText>
    <label>Product Line</label>
    <length>80</length>
    <type>Text</type>
</CustomField>