force-app/main/default/objects/Case/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <description>Support root cause corresponding to the original Root_Cause source ingredient. Values are drawn from categories represented in the original feature dictionary.</description>
    <inlineHelpText>Root cause classification supplied by the support source.</inlineHelpText>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Customer Environment</fullName><default>false</default><label>Customer Environment</label></value>
            <value><fullName>Customer-Driven Knowledge</fullName><default>false</default><label>Customer-Driven Knowledge</label></value>
            <value><fullName>Defect</fullName><default>false</default><label>Defect</label></value>
            <value><fullName>Documentation</fullName><default>false</default><label>Documentation</label></value>
            <value><fullName>Feature Request</fullName><default>false</default><label>Feature Request</label></value>
            <value><fullName>Infrastructure</fullName><default>false</default><label>Infrastructure</label></value>
            <value><fullName>Licensing</fullName><default>false</default><label>Licensing</label></value>
            <value><fullName>Third Party</fullName><default>false</default><label>Third Party</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label>Unknown</label></value>
            <value><fullName>Upgrade</fullName><default>false</default><label>Upgrade</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>