force-app/main/default/objects/Case/fields/SLA_Violation__c.field-meta.xml
<CustomField>
    <fullName>SLA_Violation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Support service-level violation indicator corresponding to the original SLT Violation source ingredient. Pre-model support data.</description>
    <inlineHelpText>True when the support case violated its applicable service-level target.</inlineHelpText>
    <label>SLA Violation</label>
    <type>Checkbox</type>
</CustomField>