force-app/main/default/objects/Case/fields/Source_Bug__c.field-meta.xml
<CustomField>
    <fullName>Source_Bug__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Raw upstream bug indicator.</description>
    <label>Source Bug</label>
    <type>Checkbox</type>
</CustomField>