force-app/main/default/objects/Case/fields/Source_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Case_Number__c</fullName>
    <description>Original upstream support case identifier retained for source lineage.</description>
    <label>Source Case Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>