force-app/main/default/objects/Case/fields/Source_First_Response_Violated__c.field-meta.xml
<CustomField>
    <fullName>Source_First_Response_Violated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Raw upstream first-response violation indicator.</description>
    <label>Source First Response Violated</label>
    <type>Checkbox</type>
</CustomField>