force-app/main/default/objects/Case/fields/Source_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Opened_Date__c</fullName>
    <description>Raw upstream support case opened date.</description>
    <label>Source Opened Date</label>
    <type>Date</type>
</CustomField>