force-app/main/default/objects/Case/fields/Source_Overall_Case_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Source_Overall_Case_Satisfaction__c</fullName>
    <description>Raw upstream case satisfaction value.</description>
    <label>Source Overall Case Satisfaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>