force-app/main/default/objects/Case/fields/Source_Product__c.field-meta.xml
<CustomField>
    <fullName>Source_Product__c</fullName>
    <description>Support Product normalized to the approved Bongo demo product label.</description>
    <label>Source Product</label>
    <length>120</length>
    <type>Text</type>
</CustomField>