force-app/main/default/objects/Case/fields/Source_Resolution_Date__c.field-meta.xml
<CustomField>
    <fullName>Source_Resolution_Date__c</fullName>
    <description>Raw upstream support case resolution date.</description>
    <label>Source Resolution Date</label>
    <type>Date</type>
</CustomField>