force-app/main/default/objects/Case/fields/Source_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Source_Root_Cause__c</fullName>
    <description>Raw upstream root-cause value; kept separate from restricted Salesforce picklist.</description>
    <label>Source Root Cause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>