force-app/main/default/objects/Case/fields/Source_Severity__c.field-meta.xml
<CustomField>
    <fullName>Source_Severity__c</fullName>
    <description>Raw upstream support severity.</description>
    <label>Source Severity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>