force-app/main/default/objects/Case/fields/Source_Special_Attention__c.field-meta.xml
<CustomField>
    <fullName>Source_Special_Attention__c</fullName>
    <description>Raw upstream special-attention classification with legacy branding normalized.</description>
    <label>Source Special Attention</label>
    <length>255</length>
    <type>Text</type>
</CustomField>