force-app/main/default/objects/Case/fields/Source_State__c.field-meta.xml
<CustomField>
    <fullName>Source_State__c</fullName>
    <description>Raw upstream support state.</description>
    <label>Source State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>