force-app/main/default/objects/Case/fields/Source_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_Status__c</fullName>
    <description>Raw upstream support status; kept separate from Salesforce Case.Status.</description>
    <label>Source Status</label>
    <length>120</length>
    <type>Text</type>
</CustomField>