force-app/main/default/objects/Case/fields/Source_Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Source_Support_Level__c</fullName>
    <description>Raw upstream support level; kept separate from restricted Salesforce picklist.</description>
    <label>Source Support Level</label>
    <length>120</length>
    <type>Text</type>
</CustomField>