force-app/main/default/objects/Case/fields/Support_Category__c.field-meta.xml
<CustomField>
    <fullName>Support_Category__c</fullName>
    <description>Support case category corresponding to the original Case Category source ingredient.</description>
    <inlineHelpText>Support-system category assigned to this case.</inlineHelpText>
    <label>Support Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>