force-app/main/default/objects/Case/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <description>Support subscription level corresponding to the original Support Level source ingredient. Pre-model support data.</description>
    <inlineHelpText>Support level associated with the customer or support case.</inlineHelpText>
    <label>Support Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Level 1 Paying</fullName>
            </value>
            <value>
                <fullName>Level 2 Paying</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>